--- a/Front/src/app/main/community/community-home/community-home.component.html
+++ b/Front/src/app/main/community/community-home/community-home.component.html
@@ -1,19 +1,23 @@
 <div fxFill fxLayout="column" fxLayoutAlign="start">
-    <o-grid #grid columns="id_community;community_name" quick-filter-columns="community_name" 
-            service="communities" entity="community" keys="id_community" [cols]="6"
-            show-page-size="false" page-size-options="4;8;16"
-            refresh-button="false" pagination-controls="true" 
-            gutter-size="20px" [ngStyle]="{'height':'600px'}">
-  
-      <o-grid-item class="CommunityCard" *ngFor="let list of grid.dataArray">
-        <o-column class="container-item">
-          <!-- <o-image class="community-image" attr="community_image" 
-                   data="{{ getImagePath(list.community_name) }}" 
-                   read-only="true" 
-                   show-controls="false"></o-image> -->
-          <div class="community-name">{{ list.community_name }}</div>
-        </o-column>
-      </o-grid-item>
-  
-    </o-grid>
-  </div>
+
+  <div class="header-title">Encuentra tu destino</div>
+
+  <o-grid #grid columns="id_community;community_name" quick-filter="no" 
+          service="communities" entity="community" keys="id_community" [cols]="5"
+          show-page-size="false" page-size-options="4;8;16"
+          refresh-button="false" pagination-controls="true" 
+          gutter-size="1px" [ngStyle]="{'height':'600px'}">
+
+    <o-grid-item class="communityCard" *ngFor="let list of grid.dataArray">
+      <o-column class="container-item">
+        <o-image class="community-image" attr="community_image" 
+                 data="{{ getImagePath(list.community_name) }}" 
+                 read-only="true" 
+                 show-controls="false"></o-image>
+        <div class="community-name">{{ list.community_name }}</div>
+      </o-column>
+    </o-grid-item>
+
+  </o-grid>
+
+</div>
