Detail Community | Snackbar actividades guardadas

--- a/Front/src/app/main/community/community-home/community-home.component.html
+++ b/Front/src/app/main/community/community-home/community-home.component.html
@@ -1,3 +1,4 @@
+<p>Hola</p>
 <div fxFill fxLayout="column" fxLayoutAlign="start">
     <o-grid #grid columns="id_community;community_name" quick-filter-columns="community_name" 
             service="communities" entity="community" keys="id_community" [cols]="6"
