--- a/Front/src/app/main/community/community-home/community-home.component.html
+++ b/Front/src/app/main/community/community-home/community-home.component.html
@@ -4,7 +4,7 @@
 
   <o-grid #grid columns="id_community;community_name" quick-filter="no" 
           service="communities" entity="community" keys="id_community" [cols]="5"
-          show-page-size="false" page-size-options="4;8;16"
+          grid-item-height="3:4" show-page-size="false" page-size-options="4;8;16"
           refresh-button="false" pagination-controls="true" 
           gutter-size="1px" [ngStyle]="{'height':'600px'}">
 
