--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation.component.html
@@ -2,9 +2,10 @@
 
         <div  class="dialog">
             <o-form #form  show-header="no" show-header-navigation="no" layout-direction="column" > 
+            <o-date-input #date attr="date" label="Date" read-only="no" required="yes" ></o-date-input>
             <o-textarea-input #message attr="message" label="{{ 'MESSAGE' | oTranslate }}" fxFlex="80" max-length="250"></o-textarea-input>
             <o-button class="send" type="RAISED" label="SEND" layout-padding color="accent" (onClick)="sendReservation()"></o-button>
-            <o-text-input #id_client_host>{{data.id_client_host}}</o-text-input>
+           
         </o-form>       
         </div>
 
