--- a/Front/src/app/main/towns/towns-detail/towns-detail.component.html
+++ b/Front/src/app/main/towns/towns-detail/towns-detail.component.html
@@ -14,7 +14,7 @@
                 <o-combo #type attr="activity_name" service="activities" entity="activity"
                     columns="id_activity;activity_name" value-column="activity_name" keys="id_activity"
                     visible-columns="activity_name" fxFlex="calc(25% - 32px)" sort="ASC" searchable="true"></o-combo>
-                
+
                 <div class="buttons-container">
                     <o-button attr="clear" [oFilterBuilderClear]="filterBuilder" type="STROKED" label="Clear"
                         layout-padding>
@@ -22,8 +22,8 @@
                     <o-button attr="filter" [oFilterBuilderQuery]="filterBuilder" type="STROKED" label="Filter"
                         layout-padding color="accent">
                     </o-button>
-                <o-filter-builder-menu [oFilterBuilder]="filterBuilder" show-filter-option="no"
-                    show-clear-filter-option="no" layout-padding></o-filter-builder-menu>
+                    <o-filter-builder-menu [oFilterBuilder]="filterBuilder" show-filter-option="no"
+                        show-clear-filter-option="no" layout-padding></o-filter-builder-menu>
                 </div>
             </div>
         </div>
@@ -40,9 +40,10 @@
             <o-grid-item class="hostCard" *ngFor="let list of grid.dataArray">
                 <o-column class="container-item">
                     <div>
-                        <o-image class="image1" data="{{ list.avatar }}" read-only="true"
-                            show-controls="false">
-                        </o-image>
+                        <a [routerLink]="['/main/travelers', list.id_client]">
+                            <o-image class="image1" data="{{ list.avatar }}" read-only="true" show-controls="false">
+                            </o-image>
+                        </a>
                     </div>
                     <div class="name-surname">
                         <h2>{{ list.name + ' ' + list.surname }}</h2>
