--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.html
@@ -1,2 +1,1 @@
-<p>travelers-reservation-detail works!</p>
-<o-form #form attr="profile_detail" service="users" entity="reservationReceived" fxLayout="column" keys="id_reservation" >
+<p>{{ id_reservation }}</p>
