Cantidad anfitrionas tows-home

--- a/Front/src/app/main/towns/towns-home/towns-home.component.html
+++ b/Front/src/app/main/towns/towns-home/towns-home.component.html
@@ -12,6 +12,7 @@
         </a>
         <div class="town-name">{{ list.town_name }}</div>
         <div class="province-name">{{ list.province_name }}</div>
+        <p class="province-name">Anfitrionas: {{ list.hostamount }}</p>
       </o-column>
     </o-grid-item>
 
