--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation.component.html
@@ -1,7 +1,7 @@
 <div class="dialog">
     <div class="text1">
-        <p>Reserva una fecha y escribe un mensaje a la anfitriona para comprobar su disponibilidad</p>
-        <!-- <p>Reserva una fecha con la anfitriona para conoceros y hacer un tour por su ciudad</p> -->
+        <!-- <p>Reserva una fecha y escribe un mensaje a la anfitriona para comprobar su disponibilidad</p> -->
+        <p>Indica una fecha para conocer a la anfitriona y hacer un tour por su ciudad</p>
     </div>
     <o-form #form show-header="no" show-header-navigation="no" layout-direction="column">
         <o-date-input #date attr="date" label="{{ 'DATE' | oTranslate }}" read-only="no" required="yes"
