--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.html
@@ -1,1 +1,11 @@
-<p>{{ id_reservation }}</p>
+<div class="container">
+    <o-form #form service="users" entity="reservation" keys="id_reservation" editable-detail="true" show-header="no"
+        show-header-navigation="no" layout-direction="column" (onDataLoaded)="ngOnInit()">
+        <p>{{name_traveler}} {{surname_traveler}} Fecha reserva:{{reservation_date | date: 'dd/MM/yyyy'}}</p>
+        <p>{{name_host}} {{surname_host}}</p>
+        <p>{{message_answer}}</p>
+        <p>{{message}}</p>
+        <p *ngIf="id_status == 1">{{phonenumber_host}} {{email_host}}</p>
+        <p>{{ 'STATUS_N' | oTranslate }} : {{status_name}}</p>
+    </o-form>
+</div>
